--- a/src/styles.css
+++ b/src/styles.css
@@ -4,16 +4,31 @@
   padding: 0;
 }
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .markdown-body {
   box-sizing: border-box;
   min-width: 200px;
   max-width: 980px;
   margin: 0 auto;
-  padding: 45px;
+  padding: 15px;
 }
 
-@media (max-width: 767px) {
-  .markdown-body {
-    padding: 15px;
-  }
+.view {
+
+}
+
+.view::-webkit-scrollbar {
+  width: 0.4rem;
+}
+
+.view::-webkit-scrollbar-track {
+  border-radius: 2px;
+}
+
+.view::-webkit-scrollbar-thumb {
+  background: #bfbfbf;
+  border-radius: 5px;
 }
